--- a/zadatak2/index.html
+++ b/zadatak2/index.html
@@ -14,7 +14,7 @@
       <h2>Ivan Ivić</h2>
     </header>
     <article>
-      <img src="male_square.png" alt="Slika Ivana - slika je računalno generirana">
+      <img src="slike/male_square.png" alt="Slika Ivana - slika je računalno generirana">
       <p>Kneza Trpimira 2B</br>
         31000<br>
         Osijek<br>
@@ -46,7 +46,7 @@
       <h2>Ivana Ivić</h2>
     </header>
     <article>
-      <img src="female_square.png" alt="Slika Ivane - slika je računalno generirana">
+      <img src="slike/female_square.png" alt="Slika Ivane - slika je računalno generirana">
       <p>Kneza Trpimira 2B</br>
         31000<br>
         Osijek<br>
